@@ -3,114 +3,95 @@ package com.sprint.mission.discodeit.service.basic;
 import com.sprint.mission.discodeit.dto.data.ReadStatusDto;
 import com.sprint.mission.discodeit.dto.request.ReadStatusCreateRequest;
 import com.sprint.mission.discodeit.dto.request.ReadStatusUpdateRequest;
+import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.entity.ReadStatus;
 import com.sprint.mission.discodeit.entity.User;
-import com.sprint.mission.discodeit.entity.Channel;
+import com.sprint.mission.discodeit.exception.channel.ChannelNotFoundException;
+import com.sprint.mission.discodeit.exception.readStatus.ReadStatusAlreadyExistsException;
+import com.sprint.mission.discodeit.exception.readStatus.ReadStatusNotFoundException;
+import com.sprint.mission.discodeit.exception.user.UserNotFoundException;
+import com.sprint.mission.discodeit.mapper.ReadStatusMapper;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
 import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.service.ReadStatusService;
+import java.time.Instant;
+import java.util.List;
+import java.util.Map;
+import java.util.NoSuchElementException;
+import java.util.UUID;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-
-import java.time.Instant;
-import java.util.List;
-import java.util.NoSuchElementException;
-import java.util.UUID;
-import java.util.stream.Collectors;
 import org.springframework.transaction.annotation.Transactional;
 
+@Slf4j
 @RequiredArgsConstructor
 @Service
-@Slf4j
 public class BasicReadStatusService implements ReadStatusService {
 
   private final ReadStatusRepository readStatusRepository;
   private final UserRepository userRepository;
   private final ChannelRepository channelRepository;
+  private final ReadStatusMapper readStatusMapper;
 
-  @Override
   @Transactional
+  @Override
   public ReadStatusDto create(ReadStatusCreateRequest request) {
     UUID userId = request.userId();
     UUID channelId = request.channelId();
 
     User user = userRepository.findById(userId)
         .orElseThrow(
-            () -> new NoSuchElementException("User with id " + userId + " does not exist"));
+            () -> new UserNotFoundException(Map.of("userId", userId)));
     Channel channel = channelRepository.findById(channelId)
         .orElseThrow(
-            () -> new NoSuchElementException("Channel with id " + channelId + " does not exist"));
+            () -> new ChannelNotFoundException(Map.of("channelId", channelId))
+        );
 
-    if (readStatusRepository.findAllByUser_Id(userId).stream()
-        .anyMatch(readStatus -> readStatus.getChannel().getId().equals(channelId))) {
-      throw new IllegalArgumentException(
-          "ReadStatus with userId " + userId + " and channelId " + channelId + " already exists");
+    if (readStatusRepository.existsByUserIdAndChannelId(user.getId(), channel.getId())) {
+      throw new ReadStatusAlreadyExistsException(Map.of("userId", userId, "channelId", channelId));
     }
 
-    Instant lastReadAt = request.lastReadAt() != null ? request.lastReadAt() : Instant.now();
-    log.info("Creating ReadStatus with userId: {}, channelId: {}, lastReadAt: {}", userId,
-        channelId, lastReadAt);
-
+    Instant lastReadAt = request.lastReadAt();
     ReadStatus readStatus = new ReadStatus(user, channel, lastReadAt);
-    ReadStatus savedReadStatus = readStatusRepository.save(readStatus);
-    return toDto(savedReadStatus);
+    readStatusRepository.save(readStatus);
+
+    return readStatusMapper.toDto(readStatus);
   }
 
   @Override
-  @Transactional
   public ReadStatusDto find(UUID readStatusId) {
-    ReadStatus readStatus = readStatusRepository.findById(readStatusId)
+    return readStatusRepository.findById(readStatusId)
+        .map(readStatusMapper::toDto)
         .orElseThrow(
-            () -> new NoSuchElementException("ReadStatus with id " + readStatusId + " not found"));
-    return toDto(readStatus);
+            () -> new ReadStatusNotFoundException(Map.of("readStatusId", readStatusId)));
   }
 
   @Override
-  @Transactional(readOnly = true)
   public List<ReadStatusDto> findAllByUserId(UUID userId) {
-    return readStatusRepository.findAllByUser_Id(userId)
-        .stream()
-        .map(readStatus -> new ReadStatusDto(
-            readStatus.getId(),
-            readStatus.getUser().getId(),
-            readStatus.getChannel().getId(),
-            readStatus.getLastReadAt()
-        ))
-        .collect(Collectors.toList());
+    return readStatusRepository.findAllByUserId(userId).stream()
+        .map(readStatusMapper::toDto)
+        .toList();
   }
 
-  @Override
   @Transactional
+  @Override
   public ReadStatusDto update(UUID readStatusId, ReadStatusUpdateRequest request) {
-    Instant newLastReadAt =
-        request.newLastReadAt() != null ? request.newLastReadAt() : Instant.now();
-    log.info("Updating ReadStatus with id: {}, newLastReadAt: {}", readStatusId, newLastReadAt);
-
+    Instant newLastReadAt = request.newLastReadAt();
     ReadStatus readStatus = readStatusRepository.findById(readStatusId)
         .orElseThrow(
-            () -> new NoSuchElementException("ReadStatus with id " + readStatusId + " not found"));
+            () -> new ReadStatusNotFoundException(Map.of("readStatusId", readStatusId)));
     readStatus.update(newLastReadAt);
-    ReadStatus updatedReadStatus = readStatusRepository.save(readStatus);
-    return toDto(updatedReadStatus);
+    return readStatusMapper.toDto(readStatus);
   }
 
-  @Override
   @Transactional
+  @Override
   public void delete(UUID readStatusId) {
     if (!readStatusRepository.existsById(readStatusId)) {
-      throw new NoSuchElementException("ReadStatus with id " + readStatusId + " not found");
+      throw new ReadStatusNotFoundException(Map.of("readStatusId", readStatusId));
     }
     readStatusRepository.deleteById(readStatusId);
-  }
-
-  private ReadStatusDto toDto(ReadStatus readStatus) {
-    return new ReadStatusDto(
-        readStatus.getId(),
-        readStatus.getUser().getId(),
-        readStatus.getChannel().getId(),
-        readStatus.getLastReadAt()
-    );
   }
 }
