@@ -5,106 +5,97 @@ import com.sprint.mission.discodeit.dto.request.UserStatusCreateRequest;
 import com.sprint.mission.discodeit.dto.request.UserStatusUpdateRequest;
 import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.entity.UserStatus;
+import com.sprint.mission.discodeit.exception.user.UserNotFoundException;
+import com.sprint.mission.discodeit.exception.userStatus.UserStatusNotFoundException;
+import com.sprint.mission.discodeit.mapper.UserStatusMapper;
 import com.sprint.mission.discodeit.repository.UserRepository;
 import com.sprint.mission.discodeit.repository.UserStatusRepository;
 import com.sprint.mission.discodeit.service.UserStatusService;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-
 import java.time.Instant;
 import java.util.List;
+import java.util.Map;
 import java.util.NoSuchElementException;
+import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+@Slf4j
 @RequiredArgsConstructor
 @Service
 public class BasicUserStatusService implements UserStatusService {
 
   private final UserStatusRepository userStatusRepository;
   private final UserRepository userRepository;
+  private final UserStatusMapper userStatusMapper;
 
-  @Override
   @Transactional
+  @Override
   public UserStatusDto create(UserStatusCreateRequest request) {
     UUID userId = request.userId();
 
     User user = userRepository.findById(userId)
-        .orElseThrow(
-            () -> new NoSuchElementException("User with id " + userId + " does not exist"));
-
-    if (userStatusRepository.findByUser_Id(userId).isPresent()) {
-      throw new IllegalArgumentException("UserStatus for userId " + userId + " already exists");
-    }
+        .orElseThrow(() -> new UserNotFoundException(Map.of("userId", userId)));
+    Optional.ofNullable(user.getStatus())
+        .ifPresent(status -> {
+          throw new UserStatusNotFoundException(Map.of("userStatusId", user.getStatus()));
+        });
 
     Instant lastActiveAt = request.lastActiveAt();
     UserStatus userStatus = new UserStatus(user, lastActiveAt);
-
-    UserStatus savedUserStatus = userStatusRepository.save(userStatus);
-    return toDto(savedUserStatus);
+    userStatusRepository.save(userStatus);
+    return userStatusMapper.toDto(userStatus);
   }
 
   @Override
-  @Transactional
   public UserStatusDto find(UUID userStatusId) {
-    UserStatus userStatus = userStatusRepository.findById(userStatusId)
+    return userStatusRepository.findById(userStatusId)
+        .map(userStatusMapper::toDto)
         .orElseThrow(
-            () -> new NoSuchElementException("UserStatus with id " + userStatusId + " not found"));
-    return toDto(userStatus);
+            () -> new UserStatusNotFoundException(Map.of("userStatusId", userStatusId)));
   }
 
   @Override
-  @Transactional
   public List<UserStatusDto> findAll() {
-    return userStatusRepository.findAll()
-        .stream()
-        .map(this::toDto)
-        .collect(Collectors.toList());
+    return userStatusRepository.findAll().stream()
+        .map(userStatusMapper::toDto)
+        .toList();
   }
 
-  @Override
   @Transactional
+  @Override
   public UserStatusDto update(UUID userStatusId, UserStatusUpdateRequest request) {
     Instant newLastActiveAt = request.newLastActiveAt();
 
     UserStatus userStatus = userStatusRepository.findById(userStatusId)
         .orElseThrow(
-            () -> new NoSuchElementException("UserStatus with id " + userStatusId + " not found"));
-
+            () -> new UserStatusNotFoundException(Map.of("userStatusId", userStatusId)));
     userStatus.update(newLastActiveAt);
-    UserStatus updatedUserStatus = userStatusRepository.save(userStatus);
-    return toDto(updatedUserStatus);
+
+    return userStatusMapper.toDto(userStatus);
   }
 
-  @Override
   @Transactional
+  @Override
   public UserStatusDto updateByUserId(UUID userId, UserStatusUpdateRequest request) {
     Instant newLastActiveAt = request.newLastActiveAt();
 
-    UserStatus userStatus = userStatusRepository.findByUser_Id(userId)
+    UserStatus userStatus = userStatusRepository.findByUserId(userId)
         .orElseThrow(
-            () -> new NoSuchElementException("UserStatus with userId " + userId + " not found"));
-
+            () -> new UserStatusNotFoundException(Map.of("userId", userId)));
     userStatus.update(newLastActiveAt);
-    UserStatus updatedUserStatus = userStatusRepository.save(userStatus);
-    return toDto(updatedUserStatus);
+
+    return userStatusMapper.toDto(userStatus);
   }
 
-  @Override
   @Transactional
+  @Override
   public void delete(UUID userStatusId) {
     if (!userStatusRepository.existsById(userStatusId)) {
-      throw new NoSuchElementException("UserStatus with id " + userStatusId + " not found");
+      throw new UserNotFoundException(Map.of("userStatusId", userStatusId));
     }
     userStatusRepository.deleteById(userStatusId);
-  }
-
-  private UserStatusDto toDto(UserStatus userStatus) {
-    return new UserStatusDto(
-        userStatus.getId(),
-        userStatus.getUser().getId(),
-        userStatus.getLastActiveAt()
-    );
   }
 }
